--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,12 @@
-<div class="map-container">
-  <div class="map-frame">
-    <div id="map"></div>
-  </div>
-</div>
+<mat-card class="card">
+  <mat-card-header>
+    <mat-card-title class="title">Trator X</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="map-container">
+      <div class="map-frame">
+        <div id="map"></div>
+      </div>
+    </div>
+  </mat-card-content>
+</mat-card>
