--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,23 @@
+.card{
+    height: 542px;
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .title{
+      width: 900px;
+      text-align: center;
+      padding: 16px 0 32px 0;
+      color: #043353;
+      font-size: 32px;
+      font-family: 'ubuntu';
+      border-bottom: solid 1px #E5E2E2;
+    }
+}
+
 .map-container {
-    height: 300px;
-    width: 500px;
+    height: 420px;
+    width: 950px;
     margin: 30px;
   }
   
