Inclusão do logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="nav">
   <div class="side-nav">
     <div class="logo">
-      <img src="https://picsum.photos/200/100" alt="" />
+      <img class="image" src="../assets/images/logo.png" alt="" />
     </div>
     <button class="nav-button">Home</button>
     <button class="nav-button">Cadastrar</button>
