--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,13 +10,17 @@
   background-color: #043353;
   height: 100%;
 
-  .logo{
+  .logo {
     width: 100%;
     height: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    .image {
+      width: 200px;
+      height: 100px;
+    }
   }
 }
 
