--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,15 @@
     <div class="logo">
       <img class="image" src="../assets/images/logo.png" alt="" />
     </div>
-    <button class="nav-button">Home</button>
-    <button class="nav-button">Cadastrar</button>
+    <button class="nav-button"  routerLink="/">Home</button>
+    <button class="nav-button" (click)="toogleCollapsible()">Cadastrar</button>
+    <div class="collapsible" *ngIf="showCollapsible">
+      <button class="nav-button" routerLink="/cadastrar/operador">Operador</button>
+      <button class="nav-button" routerLink="/cadastrar/trator">Trator</button>
+      <button class="nav-button">Cultura</button>
+    </div>
     <button class="nav-button">Dashboard</button>
-    <button class="nav-button">Notificações</button>
+    <button class="nav-button"  routerLink="/notificacoes">Notificações</button>
     <button class="nav-button">Sobre</button>
     <button class="nav-button">Suporte</button>
   </div>
