--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,12 @@
   background-color: #043353;
   height: 100%;
 
+  .collapsible{
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+  }
+
   .logo {
     width: 100%;
     height: 120px;
