--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="collapsible" *ngIf="showCollapsible">
       <button class="nav-button" routerLink="/cadastrar/operador">Operador</button>
       <button class="nav-button" routerLink="/cadastrar/trator">Trator</button>
-      <button class="nav-button">Cultura</button>
+      <button class="nav-button" routerLink="/cadastrar/talhao">Talhão</button>
     </div>
     <button class="nav-button">Dashboard</button>
     <button class="nav-button"  routerLink="/notificacoes">Notificações</button>
