--- a/src/app/pages/register/user/user.component.html
+++ b/src/app/pages/register/user/user.component.html
@@ -11,11 +11,11 @@
       </mat-form-field>
       <mat-form-field class="example-form-field" appearance="fill">
         <mat-label>CPF</mat-label>
-        <input matInput formControlName="CPF" type="text" />
+        <input matInput formControlName="cpf" type="text" />
       </mat-form-field>
       <mat-form-field class="example-form-field" appearance="fill">
         <mat-label>Matricula</mat-label>
-        <input matInput formControlName="RFID" type="text" />
+        <input matInput formControlName="rfid" type="text" />
       </mat-form-field>
       <p>
         <mat-checkbox formControlName="lgpd"></mat-checkbox>Ao criar o novo
