Inclusão do smart-rule

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
       <button class="nav-button" routerLink="/cadastrar/operador">Operador</button>
       <button class="nav-button" routerLink="/cadastrar/trator">Trator</button>
       <button class="nav-button" routerLink="/cadastrar/talhao">Talhão</button>
+      <button class="nav-button" routerLink="/cadastrar/smart-rules">Smart Rules</button>
     </div>
     <button class="nav-button">Dashboard</button>
     <button class="nav-button"  routerLink="/notificacoes">Notificações</button>
