Inclusão da tela de email, apenas visual

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
     <button class="nav-button">Dashboard</button>
     <button class="nav-button" routerLink="/notificacoes">Notificações</button>
     <button class="nav-button" routerLink="/aboutus">Sobre</button>
-    <button class="nav-button">Suporte</button>
+    <button class="nav-button" routerLink="/contactus">Suporte</button>
   </div>
   <div class="content">
     <div class="top-bar"></div>
