--- a/src/app/pages/register/smart-rules/smart-rules.component.scss
+++ b/src/app/pages/register/smart-rules/smart-rules.component.scss
@@ -1,5 +1,6 @@
 .card {
-    width: 300px;
+    width: -webkit-fill-available;
+    height: -webkit-fill-available;
 
     .form {
         display: flex;
