--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,6 +39,13 @@
   background-color: transparent;
   border: none;
   height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  .icon{
+    padding-right: 5px;
+  }
 }
 
 .nav-button:hover {
