Alteração do visual do smartrules

--- a/src/app/pages/register/smart-rules/CreateSmartRule/MapRule/mapRule.component.html
+++ b/src/app/pages/register/smart-rules/CreateSmartRule/MapRule/mapRule.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="SelectedGeofence">
             <input matInput type="text" placeholder="Selected Geofence" disabled /> 
-            <fa-icon class="fa-circle-question" [icon]="faCircleQuestion" (click)="openGeorelDescription()"></fa-icon>
+            <mat-icon  (click)="openGeorelDescription()" >help</mat-icon>
         </div>
         <div class="Buttons">
             <button mat-flat-button color="primary" (click)="openPopupGeonfece()" [disabled]="correctObjReturn"> Geofence </button>  
