--- a/src/app/pages/dialog/dialog.component.html
+++ b/src/app/pages/dialog/dialog.component.html
@@ -1,11 +1,11 @@
 <div class="dialogIcons">
-    <fa-icon class="fa-circle-question" [icon]="faCircleQuestion" *ngIf="selectedType == 'Information'"></fa-icon>
-    <fa-icon class="fa-circli-xmark" [icon]="faCircleXmark" *ngIf="selectedType == 'Error'"></fa-icon>
-    <fa-icon class="fa-circli-exclamation" [icon]="faCircleExclamation" *ngIf="selectedType == 'Warning'"></fa-icon> 
+  <mat-icon *ngIf="selectedType == 'Information'">help</mat-icon>
+  <mat-icon *ngIf="selectedType == 'Error'">cancel</mat-icon>
+  <mat-icon *ngIf="selectedType == 'Warning'">error</mat-icon>
 </div>
 <p class="title">Message</p>
-<div mat-dialog-content>  
-  <p class="message">{{selectedMessage}}</p>
+<div mat-dialog-content>
+  <p class="message">{{ selectedMessage }}</p>
 </div>
 <div mat-dialog-actions>
   <button mat-flat-button color="primary" (click)="onClose()">Close</button>
