inclusão do scroll

--- a/src/app/pages/register/smart-rules/CreateSmartRule/newSmartRules.component.html
+++ b/src/app/pages/register/smart-rules/CreateSmartRule/newSmartRules.component.html
@@ -39,7 +39,7 @@
                     <button mat-flat-button color="primary" (click)="saveRule()">Salvar</button>
                 </form>
             </mat-grid-tile> 
-            <mat-grid-tile class="grid">
+            <mat-grid-tile class=" overflow">
                 <div class="listTrucks">
                     <mat-expansion-panel [expanded]="selectedPattern === 'Devices' && selectedEntitiesType === 'Person'" disabled>
                         <mat-label>Person: </mat-label> 
