Correção do request

--- a/src/app/pages/register/smart-rules/ListSmartRules/allSmartRules.component.html
+++ b/src/app/pages/register/smart-rules/ListSmartRules/allSmartRules.component.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div id="table">
-        <table mat-table [dataSource]="dataSource" class="table">
+        <table #table mat-table [dataSource]="dataSource" class="table">
             <!--- Note that these columns can be defined in any order.
                 The actual rendered columns are set as a property on the row definition" -->
     
