--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
     </button>
   </div>
   <div class="content">
-    <div class="top-bar">Cadastrar</div>
+    <div class="top-bar"></div>
     <div class="router-content">
       <router-outlet></router-outlet>
     </div>
