--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="side-nav">
     <div class="logo">
       <img class="image" src="../assets/images/logo.png" alt="" />
+      <p class="logoName">SmartTrack</p>
     </div>
     <button class="nav-button" routerLink="/">
       <mat-icon>home</mat-icon>Home
