--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,10 +22,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 40px;
     .image {
-      width: 200px;
-      height: 100px;
+      width: 50%;
+      margin-top: -40px;
+    }
+
+    .logoName {
+      color: #fff;
+      text-align: center;
+      font-size: 24px;
+      font-weight: bold;
+      margin: 10px;
     }
   }
 }
@@ -33,7 +41,6 @@
 .nav-button {
   font-family: ubuntu;
   color: #fff;
-  font-weight: bold;
   font-size: 24px;
   text-align: justify;
   background-color: transparent;
