--- a/src/app/pages/register/smart-rules/ListSmartRules/allSmartRules.component.html
+++ b/src/app/pages/register/smart-rules/ListSmartRules/allSmartRules.component.html
@@ -42,7 +42,10 @@
             <!-- Symbol Column -->
             <ng-container matColumnDef="options">
               <th mat-header-cell *matHeaderCellDef>Options</th>
-              <td mat-cell *matCellDef="let element">...</td>
+              <td mat-cell *matCellDef="let element">
+                
+                <user-email [selectedSmartRule]="" ></user-email>
+              </td>
             </ng-container>
     
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
