reorganização do dashboard mockado

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,44 @@
-<mat-card class="card">
-  <mat-card-header>
-    <mat-card-title class="title">Trator X</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <div class="map-container">
-      <div class="map-frame">
-        <div id="map"></div>
+<div class="home">
+  <div>
+    <mat-card class="gauge">
+      <mat-card-header>
+        <mat-card-title class="title">Bateria</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <ngx-charts-gauge
+        [view]="[400, 300]"
+        [results]="battery"
+        [min]="0"
+        [max]="100"
+        [angleSpan]="360"
+        [startAngle]="0"
+        [units]="'%'"
+        [showAxis]="false">
+      </ngx-charts-gauge>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="gauge">
+      <mat-card-header>
+        <mat-card-title class="title">Horas Trabalhadas</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <ngx-charts-number-card [view]="[400, 300]" [results]="hours" [cardColor]="cardColor">
+        </ngx-charts-number-card>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <mat-card class="card">
+    <mat-card-content>
+      <div class="map-container">
+        <div class="map-frame">
+          <div id="map"></div>
+        </div>
       </div>
-    </div>
-  </mat-card-content>
-</mat-card>
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="card-table">
+    <mat-card-content>
+      
+    </mat-card-content>
+  </mat-card>
+</div>
