--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,31 +1,57 @@
-.card{
-    height: 542px;
-    width: 1000px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .title{
-      width: 900px;
-      text-align: center;
-      padding: 16px 0 32px 0;
-      color: #043353;
-      font-size: 32px;
-      font-family: 'ubuntu';
-      border-bottom: solid 1px #E5E2E2;
-    }
+.home {
+  display: flex;
+  flex-direction: row;
+}
+
+.card {
+  height: 712px;
+  width: 480px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 16px;
+
+  .title {
+    width: 900px;
+    text-align: center;
+    padding: 16px 0 32px 0;
+    color: #043353;
+    font-size: 32px;
+    font-family: 'ubuntu';
+    border-bottom: solid 1px #E5E2E2;
+  }
+}
+
+.gauge {
+  width: 450px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+  margin-right: 16px;
 }
 
 .map-container {
-    height: 420px;
-    width: 950px;
-    margin: 30px;
-  }
-  
-  .map-frame {
-    border: 2px solid black;
-    height: 100%;
-  }
-  
-  #map {
-    height: 100%;
-  }
+  height: 700px;
+  width: 475px;
+  margin: 16px;
+}
+
+.map-frame {
+  border: 2px solid black;
+  height: 100%;
+}
+
+#map {
+  height: 100%;
+}
+
+.card-table{
+  height: 712px;
+  width: 620px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
