Alteração da paleta de cores

--- a/src/app/pages/register/user/user.component.html
+++ b/src/app/pages/register/user/user.component.html
@@ -20,7 +20,7 @@
       <p>
         <mat-checkbox formControlName="lgpd"></mat-checkbox>Ao criar o novo
         usuário você declara que esta de acrodo com os termos da
-        <button style="border: 0; background-color: #fff; color: #f05e1b; cursor: pointer;" (click)="openDialog()">LGPD</button>
+        <button style="border: 0; background-color: #fff; color: #48ffd5; cursor: pointer;" (click)="openDialog()">LGPD</button>
       </p>
       <button mat-flat-button color="primary"  (click)="saveUser()">Salvar</button>
     </form>
