--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,20 +9,20 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 $md-blue: (
-  50: #e1e7ea,
-  100: #b4c2cb,
-  200: #8299a9,
-  300: #4f7087,
-  400: #2a526d,
-  500: #043353,
-  600: #032e4c,
-  700: #032742,
-  800: #022039,
-  900: #011429,
-  A100: #639dff,
-  A200: #307dff,
-  A400: #005dfc,
-  A700: #0054e3,
+  50: #e1e3e5,
+  100: #b4b9bd,
+  200: #828a91,
+  300: #4f5b65,
+  400: #2a3844,
+  500: #041523,
+  600: #03121f,
+  700: #030f1a,
+  800: #020c15,
+  900: #01060c,
+  A100: #5084ff,
+  A200: #1d60ff,
+  A400: #0045e9,
+  A700: #003ecf,
   contrast: (
     50: #000000,
     100: #000000,
@@ -42,20 +42,20 @@ $md-blue: (
 );
 
 $md-ambar: (
-  50: #fdece4,
-  100: #fbcfbb,
-  200: #f8af8d,
-  300: #f58e5f,
-  400: #f2763d,
-  500: #f05e1b,
-  600: #ee5618,
-  700: #ec4c14,
-  800: #e94210,
-  900: #e53108,
+  50: #e9fffa,
+  100: #c8fff2,
+  200: #a4ffea,
+  300: #7fffe2,
+  400: #63ffdb,
+  500: #48ffd5,
+  600: #41ffd0,
+  700: #38ffca,
+  800: #30ffc4,
+  900: #21ffba,
   A100: #ffffff,
-  A200: #ffe0da,
-  A400: #ffb4a7,
-  A700: #ff9e8e,
+  A200: #ffffff,
+  A400: #d0ffef,
+  A700: #b7ffe7,
   contrast: (
     50: #000000,
     100: #000000,
