--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
     </button>
   </div>
   <div class="content">
-    <div class="top-bar"></div>
+    <div class="top-bar"> <h1>{{ headerTitle }}</h1></div>
     <div class="router-content">
       <router-outlet></router-outlet>
     </div>
