--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,28 +2,21 @@
   <div>
     <mat-card class="gauge">
       <mat-card-header>
-        <mat-card-title class="title">Bateria</mat-card-title>
+        <mat-card-title class="title">Horas Trabalhadas</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <ngx-charts-gauge
-        [view]="[400, 300]"
-        [results]="battery"
-        [min]="0"
-        [max]="100"
-        [angleSpan]="360"
-        [startAngle]="0"
-        [units]="'%'"
-        [showAxis]="false">
-      </ngx-charts-gauge>
+        <ngx-charts-number-card [view]="[400, 300]" [scheme]="colorScheme" [results]="hours" [cardColor]="cardColor">
+        </ngx-charts-number-card>
       </mat-card-content>
     </mat-card>
     <mat-card class="gauge">
       <mat-card-header>
-        <mat-card-title class="title">Horas Trabalhadas</mat-card-title>
+        <mat-card-title class="title">Bateria</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <ngx-charts-number-card [view]="[400, 300]" [results]="hours" [cardColor]="cardColor">
-        </ngx-charts-number-card>
+        <ngx-charts-gauge [view]="[400, 300]" [results]="battery" [min]="0" [max]="100" [angleSpan]="360"
+          [startAngle]="0" [scheme]="colorScheme" [units]="'%'" [showAxis]="false">
+        </ngx-charts-gauge>
       </mat-card-content>
     </mat-card>
   </div>
@@ -36,9 +29,38 @@
       </div>
     </mat-card-content>
   </mat-card>
-  <mat-card class="card-table">
-    <mat-card-content>
-      
-    </mat-card-content>
-  </mat-card>
+  <div class="man">
+    <mat-card class="card-table">
+      <mat-card-header>
+        <mat-card-title>Manutenção Prevista</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="card-table">
+      <mat-card-header>
+        <mat-card-title>Manutenção Realizada</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="card-table">
+      <mat-card-header>
+        <mat-card-title>Manutenção Indicada</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="card-table">
+      <mat-card-header>
+        <mat-card-title>Manutenção Atrasada</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
