--- a/src/app/components/maintenance-card/maintenance-card.component.scss
+++ b/src/app/components/maintenance-card/maintenance-card.component.scss
@@ -1,13 +1,29 @@
 .card-table {
-    height: 140px;
+    height: 712px;
     width: 620px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.table{
+    width: 80%;
+}
 .add-button {
     position: absolute;
     right: 16px;
     bottom: 16px;
 }
+
+table {
+    width: 100%;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  
+  td, th {
+    width: 25%;
+  }
