--- a/src/app/components/maintenance-card/maintenance-card.component.html
+++ b/src/app/components/maintenance-card/maintenance-card.component.html
@@ -7,40 +7,33 @@
             <mat-label>Filtro</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="Troca de óleo" #input>
         </mat-form-field>
-
         <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource" matSort>
-                <!-- Name Column -->
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
                     <td mat-cell *matCellDef="let row"> {{row.name}} </td>
                 </ng-container>
-
-                <!-- Fruit Column -->
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
                     <td mat-cell *matCellDef="let row"> {{row.status}} </td>
                 </ng-container>
-                <!-- Progress Column -->
                 <ng-container matColumnDef="date">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
                     <td mat-cell *matCellDef="let row"> {{row.date | date: 'dd/MM/yyyy'}}</td>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Ação </th>
-                    <td mat-cell *matCellDef="let row"> <button mat-mini-fab color="accent">
-                        <mat-icon>edit</mat-icon>
-                    </button></td>
+                    <td mat-cell *matCellDef="let row">
+                        <button   *ngIf="row.status !== 'Realizada'" mat-icon-button color="accent">
+                            <mat-icon>done</mat-icon>
+                        </button>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-                <!-- Row shown when there is no matching data. -->
                 <tr class="mat-row" *matNoDataRow>
                     <td class="mat-cell" colspan="4">Não existe correspondencia"</td>
                 </tr>
             </table>
-
             <mat-paginator [pageSizeOptions]="[10]" aria-label="Select page of users"></mat-paginator>
         </div>
     </mat-card-content>
