--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -30,10 +30,8 @@
     </mat-card-content>
   </mat-card>
   <div class="man">
-    <app-maintenance-card></app-maintenance-card>
-    <app-maintenance-card></app-maintenance-card>
-    <app-maintenance-card></app-maintenance-card>
-    <app-maintenance-card></app-maintenance-card>
+    <app-maintenance-card title="Manutenção Atrasada"></app-maintenance-card>
+    <app-maintenance-card title="Manutenção Programada"></app-maintenance-card>
   </div>
 </div>
 <ngx-spinner [fullScreen] = "true"><mat-spinner></mat-spinner></ngx-spinner>
