--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -51,6 +51,6 @@
 .man{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  // justify-content: space-between;
   max-height: 744px;
 }
