--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,14 +18,13 @@
 
   .logo {
     width: 100%;
-    height: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    margin-bottom: 20px;
     .image {
       width: 200px;
-      height: 100px;
     }
   }
 }
