--- a/src/app/components/maintenance-card/maintenance-card.component.html
+++ b/src/app/components/maintenance-card/maintenance-card.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card-table">
     <mat-card-header>
-        <mat-card-title>Manutenção Atrasada</mat-card-title>
+        <mat-card-title>{{title}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <div class="add-button">
