--- a/src/app/pages/register/smart-rules/smart-rules.component.html
+++ b/src/app/pages/register/smart-rules/smart-rules.component.html
@@ -3,7 +3,7 @@
         <mat-tab label="Smart-Rules">
             <all-smart-rules></all-smart-rules>
         </mat-tab>
-        <mat-tab label="New Smart-Rule">
+        <mat-tab label="Nova Smart-Rule">
             <new-smart-rules></new-smart-rules>
         </mat-tab>
     </mat-tab-group>
