--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,9 +2,9 @@
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Trator</mat-label>
     <input type="text" placeholder="Trator" matInput [formControl]="myControl"
-      [matAutocomplete]="auto">
+      [matAutocomplete]="auto" >
     <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.alias.value">
+      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.alias.value" (onSelectionChange)="fetchTruck(option.id)">
         {{option.alias.value}}
       </mat-option>
     </mat-autocomplete>
