--- a/src/app/pages/register/smart-rules/CreateSmartRule/MeasurementRule/measurementRule.component.html
+++ b/src/app/pages/register/smart-rules/CreateSmartRule/MeasurementRule/measurementRule.component.html
@@ -1,13 +1,8 @@
 <mat-expansion-panel [expanded]="selectedRuleType === 'Measurements'" disabled>
   <mat-label>Rules:</mat-label><br />
   <div id="table">
-    <button
-      mat-flat-button
-      class="ruleButton"
-      color="primary"
-      (click)="addMeasurement()"
-    >
-      Add
+    <button mat-flat-button class="ruleButton" color="primary" (click)="addMeasurement()">
+      Adicionar
     </button>
     <div>
       <div class="form">
@@ -19,35 +14,21 @@
       <div class="form" *ngFor="let me of measurementsStructList; let i = index">
         <mat-form-field class="type" appearance="fill">
           <mat-select [(ngModel)]="measurementsStructList[i].field">
-            <mat-option
-              *ngFor="let attrs of attributes"
-              [value]="attrs.value"
-              [disabled]="isValidMeasurement"
-            >
+            <mat-option *ngFor="let attrs of attributes" [value]="attrs.value" [disabled]="isValidMeasurement">
               {{ attrs.label }}
             </mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field class="operation" appearance="fill">
           <mat-select [(ngModel)]="measurementsStructList[i].operation">
-            <mat-option
-              *ngFor="let op of operations"
-              [value]="op.value"
-              [disabled]="isValidMeasurement"
-            >
+            <mat-option *ngFor="let op of operations" [value]="op.value" [disabled]="isValidMeasurement">
               {{ op.value }}
             </mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field appearance="fill">
-          <input
-          class="value"
-            matInput
-            type="text"
-            [(ngModel)]="measurementsStructList[i].value"
-            [disabled]="isValidMeasurement"
-            placeholder="Decimals valeus or object ID"
-          />
+          <input class="value" matInput type="text" [(ngModel)]="measurementsStructList[i].value"
+            [disabled]="isValidMeasurement" placeholder="Decimals valeus or object ID" />
         </mat-form-field>
         <div class="delete" [hidden]="isValidMeasurement">
           <mat-icon (click)="removeMeasurement(i)">delete</mat-icon>
@@ -56,20 +37,10 @@
     </div>
   </div>
 
-  <button
-    mat-flat-button
-    color="primary"
-    (click)="onSave()"
-    [disabled]="isValidMeasurement"
-  >
-    Save
+  <button mat-flat-button color="primary" (click)="onSave()" [disabled]="isValidMeasurement">
+    Salvar
   </button>
-  <button
-    mat-flat-button
-    color="primary"
-    (click)="onUpdate()"
-    [disabled]="!isValidMeasurement"
-  >
-    Update
+  <button mat-flat-button color="primary" (click)="onUpdate()" [disabled]="!isValidMeasurement">
+    Atualizar
   </button>
 </mat-expansion-panel>
