--- a/src/app/components/maintenance-card/maintenance-card.component.html
+++ b/src/app/components/maintenance-card/maintenance-card.component.html
@@ -9,17 +9,17 @@
         </mat-form-field>
         <div class="mat-elevation-z8">
             <table mat-table [dataSource]="dataSource" matSort>
-                <ng-container matColumnDef="name">
+                <ng-container matColumnDef="message">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
-                    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                    <td mat-cell *matCellDef="let row"> {{row.message}} </td>
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
                     <td mat-cell *matCellDef="let row"> {{row.status}} </td>
                 </ng-container>
-                <ng-container matColumnDef="date">
+                <ng-container matColumnDef="datetime">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
-                    <td mat-cell *matCellDef="let row"> {{row.date | date: 'dd/MM/yyyy'}}</td>
+                    <td mat-cell *matCellDef="let row"> {{row.datetime | date: 'dd/MM/yyyy'}}</td>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Ação </th>
