--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,7 +43,7 @@
     </mat-card-content>
   </mat-card>
   <div class="man">
-    <app-maintenance-card ></app-maintenance-card>
+    <app-maintenance-card [id]="id"></app-maintenance-card>
   </div>
 </div>
 <ngx-spinner [fullScreen]="true">
